cabal-version: 2.2

name:           thexa
version:        0.1.0.0
synopsis:       Template Haskell lEXical Analyzer
build-type:     Simple

extra-doc-files:
  SYNTAX.md

extra-source-files:
  unicode/*.txt

common deps
  build-depends:
      base >=4.8 && <5
    , containers
    , file-embed
    , hashable
    , hashtables
    , megaparsec
    , mtl
    , prelude-prime
    , primitive
    , template-haskell

common lang
  default-language: Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    OverloadedLabels
    OverloadedStrings
    ParallelListComp
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

common opts
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -fwarn-tabs

common exe-opts
  import: opts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: deps, lang, opts
  hs-source-dirs: src
  exposed-modules:
    Thexa.DFA
    Thexa.DFA.Dense
    Thexa.DFA.Sparse
    Thexa.DFA.Offset
    Thexa.DFA.Types
    Thexa.GrowArray
    Thexa.IntLike.Class
    Thexa.IntLike.Map
    Thexa.IntLike.Set
    Thexa.Lexer.Core
    Thexa.Lexer.TH
    Thexa.NFA
    Thexa.Orphans
    Thexa.PrimMap
    Thexa.Regex
    Thexa.Regex.AST
    Thexa.Regex.CharSet
    Thexa.Regex.CharSet.AST
    Thexa.Regex.Compiler
    Thexa.Regex.Parser
    Thexa.Regex.QuasiQuoters
    Thexa.Regex.Unicode
    Thexa.Regex.Unicode.Grapheme
    Thexa.Regex.Unicode.Parser

test-suite spec
  import: deps, lang, exe-opts
  type: exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover

  hs-source-dirs: spec
  main-is: Spec.hs
  other-modules:
    Thexa.PrimMapSpec
    Thexa.Regex.CharSetSpec
    Thexa.Regex.CompileSpec
    Thexa.Regex.ParserSpec

  build-depends:
      thexa
    , hspec
    , hspec-megaparsec
    , QuickCheck
    , utf8-string

benchmark bench
  import: deps, lang, exe-opts
  type: exitcode-stdio-1.0

  hs-source-dirs: bench
  main-is: Bench.hs
  other-modules:
    Thexa.PrimMapBench

  build-depends:
      thexa
    , criterion
