cabal-version: 2.2

name:           thexa
version:        0.1.0.0
synopsis:       Template Haskell lEXical Analyzer
build-type:     Simple

extra-doc-files:
  SYNTAX.md

extra-source-files:
  unicode/*.txt

common deps
  build-depends:
      base >=4.8 && <5
    , bytestring
    , containers
    , file-embed
    , hashable
    , hashtables
    , megaparsec
    , mtl
    , prelude-prime
    , primitive
    , template-haskell >=2.16
    , vector
    , utf8-string

common lang
  default-language: Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    OverloadedLabels
    OverloadedStrings
    ParallelListComp
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

common opts
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -fwarn-tabs

common exe-opts
  import: opts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: deps, lang, opts
  hs-source-dirs: src
  exposed-modules:
    Thexa
    Thexa.CharSet
    Thexa.Core
    Thexa.Position
    Thexa.Regex
    Thexa.Rule

    Thexa.Internal.CharSet.AST
    Thexa.Internal.DFA
    Thexa.Internal.GrowVector
    Thexa.Internal.IntLike.Class
    Thexa.Internal.IntLike.Map
    Thexa.Internal.IntLike.Set
    Thexa.Internal.NFA
    Thexa.Internal.Orphans
    Thexa.Internal.Regex.AST
    Thexa.Internal.Regex.Compiler
    Thexa.Internal.Regex.Parser
    Thexa.Internal.Regex.QuasiQuoters
    Thexa.Internal.Unicode.Grapheme
    Thexa.Internal.Unicode.Parser
    Thexa.Internal.Unicode.Properties

test-suite spec
  import: deps, lang, exe-opts
  type: exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover

  hs-source-dirs: spec
  main-is: Spec.hs
  other-modules:
    Thexa.CharSetSpec
    Thexa.PositionSpec
    Thexa.Regex.CompileSpec
    Thexa.Regex.ParserSpec

  build-depends:
      thexa
    , hspec
    , hspec-megaparsec
    , QuickCheck

benchmark bench
  import: deps, lang, exe-opts
  type: exitcode-stdio-1.0

  hs-source-dirs: bench
  main-is: Bench.hs
  other-modules:
    Thexa.PrimMapBench

  build-depends:
      thexa
    , criterion

executable CompileGrapheme
  import: deps, lang, exe-opts
  scope: private

  hs-source-dirs: exe
  main-is: CompileGrapheme.hs
  build-depends:
      thexa
    , compact
